discussion/kv_engine/177004/177004_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

[Refactor] Reuse connection in metering tests

Reuse the same connection in the metering tests instead of
creating a new connection for each unit test

Change-Id: I8bb75157a98bb5cda50830d83ad5c1fd64d07d0c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-07-03 06:16:28.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-03 07:32:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47280/ : FAILURE

Failure of GoogleTest "WarmupDiskTest.noDataFileCollectionCountsTest":

<pre>
[ RUN      ] WarmupDiskTest.noDataFileCollectionCountsTest
unknown file: error: C++ exception with description "remove: Incorrect function.: "C:\Jenkins\workspace\kv_engine-windows-master\build\kv_engine\ep_engine_ep_unit_tests.db/test.608801\0.couch.1"" thrown in the test body.
[  FAILED  ] WarmupDiskTest.noDataFileCollectionCountsTest (45 ms)
WarmupDiskTest.noDataFileCollectionCountsTest
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47280/ )

Failure of an engine_testapp test:

<pre>
Running [73/160]: disk>RAM golden path.....\kv_engine\engines\ep\tests\ep_testsuite.cc:4296 Test failed: `" (Expected `172", got `92" - kv_size should have returned to initial value after restoring evicted item)
(111 ms) FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47280/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18515/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:34:20: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
            conn = cluster->getConnection(0);
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:49:17: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto conn = cluster->getConnection(0);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:85:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:399:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:940:23: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto connection = cluster->getConnection(0);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:991:18: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto admin = cluster->getConnection(0);
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:1223:19: error: use of undeclared identifier "cluster" [clang-diagnostic-error]
    auto bucket = cluster->getBucket("metering");
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11: error: unknown type name "size_t" [clang-diagnostic-error]
constexpr size_t MaxConnectionsPerBucket = 16;
          ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/serverless_test.h:23:8: error: use of undeclared identifier "std" [clang-diagnostic-error]
extern std::unique_ptr<cb::test::Cluster> cluster;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18515/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp_serverless/metering_test.cc:34:20:
error: use of undeclared identifier "cluster" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18515/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8186/ : FAILURE

Compile error at [2022-07-03T06:31:20.152Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp_serverless/serverless_test.h:15:11:
error: unknown type name "size_t"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8186/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20747/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20747/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17667/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39727/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20399/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21387/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28780/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8285/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19621/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
